--- a/test-output/old/BDD Test Suite/methods.html
+++ b/test-output/old/BDD Test Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>BDD Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7c709b">  <td>20/06/15 20:49:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerTestNG.setUpClass()[pri:0, instance:MyRunner.TestRunnerTestNG@1251891]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@22299840</td>   <td></td> </tr>
-<tr bgcolor="7c709b">  <td>20/06/15 20:49:58</td>   <td>404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerTestNG.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunnerTestNG@1251891]">feature</td> 
-  <td>TestNG@22299840</td>   <td></td> </tr>
-<tr bgcolor="7c709b">  <td>20/06/15 20:51:35</td>   <td>97261</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerTestNG.tearDownClass()[pri:0, instance:MyRunner.TestRunnerTestNG@1251891]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@22299840</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>20/07/22 14:09:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestRunnerTestNG.setUpClass()[pri:0, instance:MyRunner.TestRunnerTestNG@18ceff1]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@28667514</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>20/07/22 14:09:47</td>   <td>869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunnerTestNG.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:MyRunner.TestRunnerTestNG@18ceff1]">feature</td> 
+  <td>TestNG@28667514</td>   <td></td> </tr>
+<tr bgcolor="99f790">  <td>20/07/22 14:09:47</td>   <td>932</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestRunnerTestNG.tearDownClass()[pri:0, instance:MyRunner.TestRunnerTestNG@18ceff1]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@28667514</td>   <td></td> </tr>
 </table>
